--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -8,6 +8,7 @@
                     <div class="row">
                       <div class="col-md-12 jumbotron img-responsive center-block inline-block" id="jumbo">
 <form action="" method="post" #searchForm='ngForm' (ngSubmit)='submitForm()' >
+
 <div id="wrapper">
 <div class="demo">
 
@@ -210,24 +211,20 @@
 </div>
 
 
-<!-- <div class="col-lg-3 col-md-3 col-xs-6">
-<label for="demo">Property Type</label>
-    <select id="option-droup-demo" multiple="multiple" name='propertytype1'>
-    <optgroup label="All"  >
-    <option value="House" id='darkred'>House</option>
-    <option value="Apartment" id='darkred'>Apartment</option>
-    <option value="Town">Town</option>
-    <option value="Villa">Villa</option>
-    <option value="Acreage">Acreage</option>
-    <option value="Rural">Rural</option>
-    <option value="Block Of Units">Block Of Units</option>
-    <option value="Retirement Living">Retirement Living</option>
-    </optgroup>
-    </select>
+<div class="col-lg-3 col-md-3 col-xs-6">
+  <br>
+  <ng-multiselect-dropdown
+  name="propertytype"
+  [placeholder]="'Property Type'"
+  [data]="dropdownList"
+  [(ngModel)]="selectedItems"
+  [settings]="dropdownSettings"
+  (onSelect)="onItemSelect($event)"
+  (onSelectAll)="onSelectAll($event)">
+</ng-multiselect-dropdown>
+</div>
 
-    <input id='btndarkred' type='submit' value='Search' class='btn btn-primary'>
 
-</div> -->
 </div>
 </div>
 
