--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -109,7 +109,10 @@
 
 <div class='container-fluid'>
 
-
+  <div style="position: relative"> <!-- the position of the parent container must be set to relative -->
+    <!-- It is really important to set loaderId for non-master loader -->
+    <ngx-ui-loader [loaderId]="'loader-01'"></ngx-ui-loader>
+  </div>
 
        <nav class="navbar navbar-expand-lg navbar-light bg-light justify-content-center" style='margin-bottom:20px;'>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
@@ -140,7 +143,7 @@
 
     </ul>
    <form class="form-inline my-2 my-lg-0">
- 
+
      <a href=""> <button class="btn btn-outline-success my-2 my-sm-0" type="button" id='btndarkred'>LOGOUT</button> </a>
 
     <a href=""> <button class="btn btn-outline-success my-2 my-sm-0" type="button" id='btndarkred'>JOIN</button></a>
@@ -156,4 +159,5 @@
   </body>
 </html>
 
+<ngx-ui-loader></ngx-ui-loader>
 <router-outlet></router-outlet>
