--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -131,7 +131,7 @@
       </li>
 
     <li class="nav-item">
-    <a class="nav-link" id='darkred' *ngIf="apikey!=='null'">MY POST</a>
+    <a class="nav-link" id='darkred' *ngIf="apikey!=='null'" routerLink='/mypost'>MY POST</a>
     </li>
 
     <li class="nav-item">
